edition = "2023";
package proton.sdk;

import "google/protobuf/any.proto";

option features.utf8_validation = NONE;
option csharp_namespace = "Proton.Sdk.CExports";

message Request {
    oneof payload {
        CancellationTokenSourceCreateRequest cancellationTokenSourceCreate = 100;
        CancellationTokenSourceCancelRequest cancellationTokenSourceCancel = 101;
        CancellationTokenSourceFreeRequest cancellationTokenSourceFree = 102;

        SessionBeginRequest sessionBegin = 200;
        SessionResumeRequest sessionResume = 201;
        SessionRenewRequest sessionRenew = 202;
        SessionEndRequest sessionEnd = 203;
        SessionTokensRefreshedSubscribeRequest sessionTokensRefreshedSubscribe = 204;
        SessionTokensRefreshedUnsubscribeRequest sessionTokensRefreshedUnsubscribe = 205;
        SessionFreeRequest sessionFree = 206;

        LoggerProviderCreate loggerProviderCreate = 300;
    };
}

message Response {
    oneof result { // Optional, if no return value and no error
        google.protobuf.Any value = 1;
        Error error = 2;
    }
}

// Cancellation tokens

// The response value will be an Int64Value message.
message CancellationTokenSourceCreateRequest {}

// No response value.
message CancellationTokenSourceCancelRequest {
    int64 cancellation_token_source_handle = 1;
}

// No response value.
message CancellationTokenSourceFreeRequest {
    int64 cancellation_token_source_handle = 1;
}

// Sessions

// The response value will be an Int64Value message.
message SessionBeginRequest {
    string username = 1;
    string password = 2;
    string app_version = 3;
    string secret_cache_path = 4; // Optional
    ProtonClientOptions options = 5; // Optional
    int64 cancellation_token_source_handle = 6;
}

// The response value will be an Int64Value message.
message SessionResumeRequest {
    string username = 1;
    string app_version = 2;
    SessionId session_id = 3;
    UserId user_id = 4;
    string access_token = 5;
    string refresh_token = 6;
    repeated string scopes = 7;
    bool is_waiting_for_second_factor_code = 8;
    bool is_waiting_for_data_password = 9;
    string secret_cache_path = 10;
    ProtonClientOptions options = 11;
}

// The response value will be an Int64Value message.
message SessionRenewRequest {
    int64 old_session_handle = 1;
    SessionId session_id = 2;
    string access_token = 3;
    string refresh_token = 4;
    repeated string scopes = 5;
    bool is_waiting_for_second_factor_code = 6;
    bool is_waiting_for_data_password = 7;
}

// No response value.
message SessionEndRequest {
    int64 session_handle = 1;
}

// The response value will be an Int64Value message.
message SessionTokensRefreshedSubscribeRequest {
    int64 session_handle = 1;
    int64 tokens_refreshed_callback = 2;
}

// No response value.
message SessionTokensRefreshedUnsubscribeRequest {
    int64 subscription_handle = 1;
}

// No response value.
message SessionFreeRequest {
    int64 session_handle = 1;
}

// The response value will be an Int64Value message.
message LoggerProviderCreate {
    int64 log_callback = 1;
}

message LogEvent {
    int32 level = 1;
    string message = 2;
    string category_name = 3;
}

enum ProtonClientTlsPolicy {
    PROTON_CLIENT_TLS_POLICY_STRICT = 0;
    PROTON_CLIENT_TLS_POLICY_NO_CERTIFICATE_PINNING = 1;
    PROTON_CLIENT_TLS_POLICY_NO_CERTIFICATE_VALIDATION = 2;
}

enum AddressStatus {
    ADDRESS_STATUS_DISABLED = 0;
    ADDRESS_STATUS_ENABLED = 1;
    ADDRESS_STATUS_DELETING = 2;
}

enum DelinquentState {
    DELINQUENT_STATE_PAID = 0;
    DELINQUENT_STATE_AVAILABLE = 1;
    DELINQUENT_STATE_OVERDUE = 2;
    DELINQUENT_STATE_DELINQUENT = 3;
    DELINQUENT_STATE_NOT_RECEIVED = 4;
}

enum UserType {
    USER_TYPE_UNKNOWN = 0;
    USER_TYPE_PROTON = 1;
    USER_TYPE_MANAGED = 2;
    USER_TYPE_EXTERNAL = 3;
}

message ProtonClientOptions {
    string base_url = 1; // Optional
    string user_agent = 2; // Optional
    string bindings_language = 3; // Optional
    ProtonClientTlsPolicy tls_policy = 4; // Optional
    int64 logger_provider_handle = 5; // Optional
    string entity_cache_path = 6; // Optional
}

message SessionTokens {
    string access_token = 1;
    string refresh_token = 2;
}

enum ErrorDomain {
    Undefined = 0;
    SuccessfulCancellation = 1;
    Api = 2;
    Network = 3;
    Transport = 4;
    Serialization = 5;
    Cryptography = 6;
    DataIntegrity = 7;
}

message Error {
    string type = 1;
    string message = 2;
    ErrorDomain domain = 3;
    int64 primary_code = 4; // Optional
    int64 secondary_code = 5; // Optional
    string context = 6; // Optional
    Error inner_error = 7; // Optional
}

message StringResponse {
    string value = 1;
}

message SessionId {
    string value = 1;
}

message UserId {
    string value = 1;
}

message UserKeyId {
    string value = 1;
}

message AddressId {
    string value = 1;
}

message AddressKeyId {
    string value = 1;
}

message AddressKey {
    AddressId address_id = 1;
    AddressKeyId address_key_id = 2;
    bool is_allowed_for_encryption = 3;
}
